modules/security/main.tf
# Create a Network Security Group (NSG)
# Acts like a firewall to control allowed/denied traffic to resources (NIC or subnet).
resource "azurerm_network_security_group" "nsg" {
  name                = var.nsg_name
  location            = var.location
  resource_group_name = var.resource_group_name

    # ✅ Allow SSH (port 22) from anywhere (for Ansible, SSH)
  security_rule {
    name                       = "Allow-SSH"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "var.ssh_source_ip"
    destination_address_prefix = "*"
  }

    # ✅ Allow HTTP (port 80) from anywhere (for web apps like Nginx)
  security_rule {
    name                       = "Allow-HTTP"
    priority                   = 1002
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}
